# nanosistant

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  app.js  docker-compose.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: announcements.yml  ideas.yml  pack-showcase.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  model_behavior.yml  pack_submission.yml
.github/workflows/: ci.yml  pack-validation.yml  pages.yml  release.yml  security.yml  stale.yml
.nstn-agents/: agent-1775129523076194739.json  agent-1775129523076194739.md  agent-1775129523137133332.json  agent-1775129523137133332.md  agent-1775129734117411930.json  agent-1775129734117411930.md  agent-1775129734176302759.json  agent-1775129734176302759.md  agent-1775129766531451879.json  agent-1775129766531451879.md  agent-1775129766588538369.json  agent-1775129766588538369.md
clients/ios/NanoClawKit/: Package.swift  README.md
clients/ios/NanoClawKit/Sources/NanoClawKit/: BrainClient.swift  DeterministicResolver.swift  Models.swift  MusicTheory.swift  NanoClawClient.swift  OfflineQueue.swift  SessionManager.swift
clients/ios/NanoClawKit/Tests/NanoClawKitTests/: DeterministicResolverTests.swift  NanoClawClientTests.swift  OfflineQueueTests.swift
config/: ingestion.toml  settings.toml
config/agents/: development.toml  framework.toml  general.toml  investment.toml  music.toml
config/prompts/: development.md  dreamer_v05.md  framework.md  general.md  identity.md  investment.md  music.md  orchestrator_v05.md
crates/api/: Cargo.toml
crates/api/src/: client.rs  lib.rs
crates/api/src/providers/: claw_provider.rs  mod.rs  nstn_provider.rs  openai_compat.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: det_code.rs  det_data.rs  det_finance.rs  det_geo.rs  det_music.rs  det_text.rs  det_time.rs  deterministic.rs  domain.rs  events.rs  function_proposal.rs  handoff.rs  lib.rs  router.rs  typed_ir.rs
crates/common/src/det/: mod.rs
crates/common/src/det/domain/: finance.rs  health.rs  mod.rs  music.rs  physics.rs  social.rs  time.rs
crates/common/src/det/operator/: mod.rs
crates/common/src/det/universal/: complexity.rs  graph.rs  information.rs  integration.rs  language.rs  logic.rs  mod.rs  probability.rs  psychology.rs
crates/compat-harness/: Cargo.toml
crates/compat-harness/src/: lib.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: grpc_tier_boundary.rs  knowledge_pipeline.rs  session_lifecycle.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs
crates/nanoclaw/: Cargo.toml
crates/nanoclaw/src/: edge.rs  grpc_client.rs  lib.rs  local.rs  sync.rs
crates/nstn-cli/: Cargo.toml
crates/nstn-cli/src/: init.rs  input.rs  main.rs  render.rs
crates/packs/: Cargo.toml
crates/packs/src/: evaluator.rs  lib.rs  loader.rs  manifest.rs  registry.rs  rules.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: hooks.rs  lib.rs
crates/ruflo/: Cargo.toml
crates/ruflo/src/: agent_config.rs  agent_factory.rs  budget.rs  dreamer.rs  dreamer_applier.rs  evaluators.rs  external_mirror.rs  feedback.rs  god_time.rs  grpc_server.rs  lib.rs  mcp_bridge.rs  memory.rs  model_router.rs  orchestrator.rs  ruflo_proxy.rs  session_store.rs  watchdog.rs
crates/ruflo/tests/: live_pipeline.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bootstrap.rs  config.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_config.rs  mcp_stdio.rs  oauth.rs  prompt.rs  remote.rs  sandbox.rs
crates/ruvector/: Cargo.toml
crates/ruvector/src/: embeddings.rs  grpc_server.rs  ingest.rs  lib.rs  mcp_server.rs  pipeline.rs  qdrant.rs  store.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  file_ops.rs  lib.rs
docs/: README.md
docs/architecture/: deployment.md  memory.md  overview.md  routing.md  security.md  typed-ir.md
docs/crates/: README.md  nstn-common.md  nstn-nanoclaw.md  nstn-ruflo.md  nstn-ruvector.md
docs/guides/: adding-a-domain.md  model-providers.md  quickstart.md
hub/: auth.js  index.html
packs/domain/code/: pack.toml
packs/domain/data/: pack.toml
packs/domain/finance/: pack.toml
packs/domain/geo/: pack.toml
packs/domain/health/: pack.toml
packs/domain/music/: pack.toml  rules.toml
packs/domain/physics/: pack.toml
packs/domain/social/: pack.toml
packs/domain/text/: pack.toml
packs/domain/time/: pack.toml
packs/universal/complexity/: pack.toml
packs/universal/graph/: pack.toml
packs/universal/information/: pack.toml
packs/universal/integration/: pack.toml
packs/universal/language/: pack.toml
packs/universal/logic/: pack.toml
packs/universal/probability/: pack.toml
packs/universal/psychology/: pack.toml
proto/: nanosistant.proto
tests/integration/: routing_pipeline.rs
