[package]
name = "nstn-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
toml.workspace = true

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true
