[package]
name = "nstn-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
toml.workspace = true
aho-corasick = "1.1"
regex.workspace = true
strsim = "0.11"
tracing.workspace = true

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
