[package]
name = "nstn-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
lsp-types.workspace = true
url.workspace = true

[lints]
workspace = true
