[package]
name = "nstn-nanoclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nstn-common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
