[package]
name = "nstn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "nanosistant"
path = "src/main.rs"

[dependencies]
nstn-runtime = { path = "../runtime" }
nstn-api = { path = "../api" }
nstn-commands = { path = "../commands" }
nstn-plugins = { path = "../plugins" }
nstn-tools = { path = "../tools" }
nstn-common = { path = "../common" }
nstn-ruflo = { path = "../ruflo" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
crossterm = "0.28"
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-fancy"] }

[lints]
workspace = true
