[package]
name = "nstn-ruflo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nstn-common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
