[package]
name = "nstn-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nstn-runtime = { path = "../runtime" }
axum.workspace = true
async-stream = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
