[package]
name = "nstn-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nstn-api = { path = "../api" }
nstn-plugins = { path = "../plugins" }
nstn-runtime = { path = "../runtime" }
glob = "0.3"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "time"] }
walkdir = "2"

[lints]
workspace = true
